# Drill

./: .clang-format  .dockerignore  .flake8  .gitattributes  .gitignore  .gitmodules  .travis.py  .travis.yml  .travis.yml.old  .travisignore  Build_win-x64.bat  CMakeLists.txt  CMakeLists.txt.old  CNAME  DartConfiguration.tcl  Dockerfile  Drill  Drill.cbp  Drill.sln  Makefile  Makefile.old  PKGBUILD  README.md  _config.yml  azure-pipelines.yml  build.bash  build.py  build_appimage.sh  build_linux.bash  build_linux.sh  build_osx.bash  build_windows.bash  drill-appimage.sh  drill.py  drill.yml  dub.json  flowchart.yuml  index.html.old  log.txt  makefile  (+11 more)
.azure-pipelines/: appimage_create.yml  create_appimage.sh  download_github_file.yml  dub_install_linux.yml  dub_install_osx.yml  dub_install_windows.yml  gtk_install_linux.yml  gtk_install_osx.yml  gtk_install_windows.yml  job_linux_appimage_create.yml  job_linux_cli_release.yml  job_linux_cli_unittest.yml  job_linux_gtk_release.yml  job_linux_gtk_unittest.yml  job_osx_cli_release.yml  job_osx_cli_unittest.yml  job_osx_gtk_release.yml  job_osx_gtk_unittest.yml  job_windows_cli_release.yml  job_windows_cli_unittest.yml  job_windows_gtk_release.yml  job_windows_gtk_unittest.yml  linux_create_appimage.yml  pipeline_beta.yml  pipeline_pullrequests.yml  pipeline_release.yml  pipeline_rolling_release.yml  pipeline_tests.yml
.azure-pipelines.old/: pipeline_beta.yml  pipeline_pullrequests.old.yml  pipeline_rolling_release.yml  pipeline_tests.old.yml
.github/: FUNDING.yml  create_appimage.bash  install_d.bash  install_gtk.bash
.github/.azure-pipelines.old/: pipeline_release.old.yml  (+1 more)
.old/: build.py
.travis/: create_appimage.bash  install_d.bash  install_gtk.bash  pipeline.bash  rolling_release.bash
Assets/: README.md  drill.glade  icon.xpm  settings.html  ui.glade  ui.glade~
BuildOld/: Mac.sh  Windows.bat
CLI/: CLI.cpp  CLI.cs  CLI.csproj  CLI.d  CMakeLists.txt  DrillCLI.cbp  Makefile  Program.cs  cli.c  dub.json
CLI/Core/: DrillCore.cbp
CLI/Core/spdlog/: spdlog.cbp
CLI/core/: CMakeLists.txt  config.h  context.c  context.h
Core/: API.d  AppImage.d  ApplicationInfo.d  CMakeLists.txt  Class1.cs  Config.cpp  Config.d  Config.hpp  Context.d  Core.csproj  Core.visualdproj  Crawler.cpp  Crawler.cs  Crawler.d  Crawler.hpp  DiskRead.cs  DrillException.cs  DrillResult.cs  Engine.cpp  Engine.hpp  ExtensionIcon.cs  FileInfo.d  FileInfo.hpp  Heuristics.cs  HeuristicsDirectoryPriority.cs  ListData.d  Makefile  Makefile.new  MatchingFunctions.d  Meta.d  Module.cs  RegexUtils.cpp  Search.cs  SearchQueue.cs  StringUtils.cs  System.hpp  Utils.d  dub.json  meson.build  regexvalidatorstring.include
Core/Modules/LocalFileNameSearch/: LocalFileNameSearch.cs
Core/Modules/LocalFileSearch/: Crawler.cs  LocalFileSearch.cs
Core/Subsystem/: Linux.cpp  Windows.cpp
Core/folly/: libfolly.pc  libfolly.pc.gen
Core/include/: FileInfo.hpp  RegexUtils.hpp  system.h
Core/scope_guard/: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md
Core/scope_guard/example/: CMakeLists.txt  scope_exit_example.cpp  scope_fail_example.cpp  scope_succes_example.cpp
Core/scope_guard/test/: CMakeLists.txt  test.cpp
Core/spdlog/: Makefile  cmake_install.cmake
Core/src/: RegexUtils.cpp
Core/x64/Debug GDC/: Core.build.cmd  Core.build.rsp  Core.buildlog.html
Core/x64/Debug LDC/: Core.build.cmd  Core.build.rsp  Core.buildlog.html
Docker/: .env  Dockerfile  Linux.Dockerfile  Windows.Dockerfile  docker-compose.yml
Drill/: App.xaml  App.xaml.cs  AppShell.xaml  CursorExtensions.cs  Drill.csproj  DrillResult.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs
Example/PrintMountpoints/: CMakeLists.txt  Example  main.cpp
GTK/: CMakeLists.txt  GTKBinds.d  GtkContext.d  ListStore.d  Main.cpp  Main.d  TreeView.d  Window.d  dub.json
GTK-Windows/: README.me
GTKCpp/: Booting.cpp  Booting.hpp  CMakeLists.txt  Config.hpp  Functional.hpp  Main.cpp
GTKWin/: README.me
NWAddon/: binding.gyp  main.cpp  main.js  package.json
NWjs/: drill.css  drill.html  drill.js  main.js  package-lock.json  package.json
Qt/: CMakeLists.txt  drillqt.ui  mainwindow.cpp
Tests/: SearchTest.cs  Tests.csproj
Tools/: README.md  RefreshEnv.sh
Tools.old/: ListsMerger.d
UI/: AppShell.xaml  AppShell.xaml.cs  CursorExtensions.cs  HyperlinkSpan.cs  MainPage.xaml  MainPage.xaml.cs  MainPageViewModel.cs  MauiProgram.cs  UI.csproj
Win32/: CMakeLists.txt  ui.cpp  windows.rc
WinAPI/: WinAPI.d  WinAPI.visualdproj  dub.json
WinForms/: Drill.Designer.cs  Drill.cs  DrillResult.cs  Init.cs  SearchWindow.Designer.cs  SearchWindow.cs  SearchWindow.resx  ShellHelper.cs  WinForms.csproj
assets/: README.md
blocklists/: global.txt
cli/: CLI.cpp  CMakeLists.txt  DrillCLI  cli.c  makefile
core/: CMakeLists.txt  config.h  context.c  context.h  crawler.c  crawler.h  file_info.h  log.c  log.h  makefile  matching_functions.h  meta.h  utils.h
core/include/: Crawler.hpp  RegexUtils.hpp  crawler.h  crawler.hpp  engine.h  os.h  path_string.h  result.h  result.hpp  string_utils.hpp
core/src/: Config.cpp  Crawler.cpp  Engine.cpp  crawler.cpp  engine.cpp  path_string.c  result.cpp  string_utils.cpp
core/src/subsystem/: linux.c  linux.cpp  windows.c  windows.cpp
docs/: CNAME  Drill-Whitepaper.tex  _config.yml  drill_screenshot.png~  fetchDownloads.js  index.html  index.md  style.css  styles.css
gtk/: CMakeLists.txt
gtk/assets/: icons.map  ui.glade
gtk/src/: main.cpp
scripts/: PKGBUILD.archlinux  benchmark.sh  build_arch_pkg.sh  build_linux_appimage.sh  build_linux_deb.sh  build_linux_rpm.sh  build_mac.sh  drill.spec.rpm  test_arch_installed_cli.sh  test_arch_installed_qt.sh  test_linux_installed_cli.sh  test_linux_installed_qt.sh  test_rpm_installed_cli.sh  test_rpm_installed_qt.sh
source/: Crawler.d  Drill.d  FileInfo.d
src/: cli.py  drillentry.py  dub.json  heuristics.py  main.py  multiqueue.py  search.py  sortedqueue.py  sortedset.py  ui.py  utils.py
tests/: test_cli.py  test_functional_search.py  test_sortedset_functional.py  test_window.py
tools/: create_zip.sh
(+353 files in other folders)
